<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="OZ8-wE-Wtx">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
    </dependencies>
    <scenes>
        <!--Make It Faster!-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Make It Faster!" id="BYZ-38-t0r" customClass="ViewController" customModule="MakeItFaster" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AQ5-9O-K6o">
                                <rect key="frame" x="249" y="265" width="102" height="70"/>
                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
                                <state key="normal" title="Fast!">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="BCT-Yu-Bpj" kind="show" id="IIK-M8-5Cp"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="0.0" blue="0.2588235438" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="AQ5-9O-K6o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6CM-42-DtA"/>
                            <constraint firstItem="AQ5-9O-K6o" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="C7R-Qw-wab"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="z3b-Dy-jqD"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1697" y="616"/>
        </scene>
        <!--Make It More Testable!-->
        <scene sceneID="GrH-4e-gzd">
            <objects>
                <viewController title="Make It More Testable!" id="BCT-Yu-Bpj" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="4LG-Yr-g7z"/>
                        <viewControllerLayoutGuide type="bottom" id="HcG-W5-egg"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="zGN-D7-eSV">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2XW-VF-U1f">
                                <rect key="frame" x="249" y="265" width="102" height="70"/>
                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
                                <state key="normal" title="Test!">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="gON-NG-GaV" kind="show" id="7hI-GJ-fMz"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.031372549020000001" green="0.59215686270000001" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="2XW-VF-U1f" firstAttribute="centerY" secondItem="zGN-D7-eSV" secondAttribute="centerY" id="Uey-3K-Rhq"/>
                            <constraint firstItem="2XW-VF-U1f" firstAttribute="centerX" secondItem="zGN-D7-eSV" secondAttribute="centerX" id="ZJx-Cp-63L"/>
                        </constraints>
                    </view>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="pWJ-YO-Wxo" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2423" y="616"/>
        </scene>
        <!--Make It Better...!-->
        <scene sceneID="uTB-xl-6cA">
            <objects>
                <viewController title="Make It Better...!" id="gON-NG-GaV" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="L4C-Yu-pek"/>
                        <viewControllerLayoutGuide type="bottom" id="EgJ-lO-Him"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="RoI-sB-Nxo">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vI8-Ia-5Al">
                                <rect key="frame" x="231" y="265" width="140" height="70"/>
                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
                                <state key="normal" title="Better!">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="vI8-Ia-5Al" firstAttribute="centerX" secondItem="RoI-sB-Nxo" secondAttribute="centerX" id="Y79-uR-6eJ"/>
                            <constraint firstItem="vI8-Ia-5Al" firstAttribute="centerY" secondItem="RoI-sB-Nxo" secondAttribute="centerY" id="jcw-oN-deb"/>
                        </constraints>
                    </view>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xCO-NF-qSo" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3136" y="616"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="a5I-3Y-TPC">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OZ8-wE-Wtx" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fYU-Va-gNK">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="PGG-81-enc"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VgD-Uh-cds" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="885" y="1276"/>
        </scene>
    </scenes>
</document>
